--- a/find.html
+++ b/find.html
@@ -4,17 +4,29 @@
     <head>
         <meta charset="UTF-8">
         <title>Beer USA</title>
+
+        <!-- Bootstrap stylesheet -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
             integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-        <!-- <style>
-            body {
-                background: url("../clear-blue-sky-2.jpg");
-                background-size: cover;
-                background-blend-mode: lighten;
-            }
-        </style>
-    -->
+
+        <!-- Google Font -->
+        <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet">
+
+        <!-- Leaflet CSS -->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+            integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+            crossorigin="" />
+
+        <!-- Icons -->
+        <link rel="stylesheet" type="text/css"
+            href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="static/css/leaflet.extra-markers.min.css">
+
+        <!-- Our CSS -->
+        <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    </head>
+
 
     </head>
 
@@ -44,7 +56,12 @@
             </div>
         </nav>
 
+        <!-- The div that holds our map -->
+        <div id="map-id"></div>
+
+
         <division>
+
             <div class="container-fluid pl-5 pr-5">
                 <div class="row mt-3 mb-3">
                     <div class="col-md-12">
@@ -52,8 +69,9 @@
                     </div>
                 </div>
 
+                <!-- The div that holds our map -->
                 <div class="row">
-                    <div class="col-md-12">
+                    <div id="map-id" class="col-md-12">
                         <h6>INSERT INTERACTIVE MAP HERE</h6>
                     </div>
                 </div>
@@ -67,7 +85,38 @@
 
         </division>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        <!-- D3 -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
+
+        <!-- MomentJS -->
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
+
+        <!-- Leaflet JavaScript -->
+        <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+            integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+            crossorigin=""></script>
+
+        <!-- Icons -->
+        <script src="static/js/leaflet.extra-markers.min.js"></script>
+
+        <!-- polyfill.io is library for using newer JavaScript features in older browers (such as Object.assign) -->
+        <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+
+        <!-- API Key -->
+        <script type="text/javascript" src="Mapping/static/js/config.js"></script>
+
+        <!-- Our JavaScript -->
+        <script type="text/javascript" src="Mapping/static/js/logic.js"></script>
+
+
+
+
+
+
+
+
+        <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -75,7 +124,7 @@
             crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script> -->
 
 
         <!-- ADD REFERENCE TO D3 AND CLOUDFARE -->
