--- a/Mapping/nc_breweries.html
+++ b/Mapping/nc_breweries.html
@@ -36,15 +36,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">US Beer Market<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">US Beer Market<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="state.html">State Brewery Data</a>
+          <a class="nav-link" href="/state">State Brewery Data</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="nc_breweries.html">Find a Brewery</a>
+          <a class="nav-link" href="/nc_breweries">Find a Brewery</a>
         </li>
       </ul>
     </div>
@@ -74,7 +74,7 @@
   <script type="text/javascript" src="static/js/config.js"></script>
 
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="static/js/logic_bonus.js"></script>
 
 </body>
 
